--- a/index.css
+++ b/index.css
@@ -1,7 +1,34 @@
 body {
     font-family: 'Noto Sans', sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
 a:hover {
     text-decoration: none;
+}
+
+#thanks {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 75%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#emoji:hover {
+    transform: scale(1.2);
+    border: 3px solid green;
+}
+
+#add-user {
+    border: 1px solid darkgray;
+}
+#add-user:hover {
+    transform: scale(1.2);
+}
+
+#add-user:active {
+    transform: scale(1.1);
 }
