--- a/index.css
+++ b/index.css
@@ -17,6 +17,15 @@ a:hover {
     transform: translate(-50%, -50%);
 }
 
+#showAll {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 75%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 #emoji:hover {
     transform: scale(1.2);
     border: 3px solid green;
