--- a/index.css
+++ b/index.css
@@ -27,8 +27,9 @@ a:hover {
 }
 
 #emoji:hover {
+    border: 1px solid green;
     transform: scale(1.2);
-    border: 3px solid green;
+    
 }
 
 #add-user {
@@ -40,4 +41,8 @@ a:hover {
 
 #add-user:active {
     transform: scale(1.1);
+}
+
+.card:hover {
+    border: 1px solid green;
 }
